# cpp-linux-socket-client-server

./: CMakeLists.txt  log.txt  run_client_1.sh  run_client_2.sh  run_client_3.sh  run_server.sh
src/arguments/: arguments.cpp  arguments.h
src/client/: client.cpp  client.h
src/includes/: base_includes.h
src/main/: main_client.cpp  main_server.cpp
src/server/: server.cpp  server.h
src/time/: time.h
